# Medicoin-Full-Stack

./: docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  app.py  database.db  db.py  entities.py  pyproject.toml  requirements.txt
backend/routes/: __init__.py  images.py
backend/routes/auth/: __init__.py  doctor.py  patient.py
client/: package-lock.json  package.json
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App11.js
frontend/src/apis/: index.js
frontend/src/components/: Card.jsx  Loading.jsx
frontend/src/context/: AuthProvider.jsx
frontend/src/layout/: MainLayout.jsx
frontend/src/routes/: GuestRoutes.jsx  ProtectedRoutes.jsx
frontend/src/screens/: Appointments.jsx  History.jsx  Landing.jsx  Model.jsx  Models.jsx  Patients.jsx  Profile.jsx  Settings.jsx  Signin.jsx  Signup.jsx
server/: .gitignore  requirements.txt
