[project]
name = "be1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "matplotlib>=3.10.1",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "uvicorn>=0.34.2",
]
